--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <header>
         <nav>
             <ul>
-                <li>About</li>
-                <li>Store</li>
+                <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
+                <li><a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a></li>
             </ul>
             <ul>
-                <li>Gmail</li>
-                <li>Images</li>
+                <li><a href="http://www.gmail.com/">Gmail</a></li>
+                <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a></li>
                 <li>Apps</li>
                 <li>Account</li>
             </ul>
@@ -30,14 +30,14 @@
     <footer>
         <nav>
             <ul>
-                <li>Advertising</li>
-                <li>Business</li>
-                <li>How Search Works</li>
+                <li><a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
+                <li><a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a></li>
+                <li><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
             </ul>
             <ul>
-                <li>Privacy</li>
-                <li>Terms</li>
-                <li>Settings</li>
+                <li><a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a></li>
+                <li><a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a></li>
+                <li><a href="https://support.google.com/accounts/answer/3118621?hl=en">Settings</a></li>
             </ul>
 
         </nav>
