--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Google</title> 
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
-                <li><a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a></li>
-            </ul>
-            <ul>
-                <li><a href="http://www.gmail.com/">Gmail</a></li>
-                <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a></li>
-                <li>Apps</li>
-                <li>Account</li>
-            </ul>
+            <div id="upper-left-links">
+                <ul>
+                    <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
+                    <li><a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a></li>
+                </ul>
+            </div>
+            <div id="upper-right-links">
+                <ul>
+                    <li><a href="http://www.gmail.com/">Gmail</a></li>
+                    <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+                </ul>
+            </div>
+            <div id="upper-right-icons">
+                <ul>
+                    <li><img id="apps" src="https://www.iconfinder.com/data/icons/google-material-design-icons/48/ic_apps_48px-512.png" alt="Google Apps"></li>
+                    <li><img id="account" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ce/Google_account_icon.svg/804px-Google_account_icon.svg.png" alt="Google Account"></li>
+                </ul>
+            </div>
         </nav>  
     </header>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
