positioned google logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             </div>
         </nav>  
     </header>
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    <div id="logo-container">
+        <img id="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    </div>
     <input type="form">
     <button type="button">Google Search</button>
     <button type="button">I'm Feeling Lucky</button>
