positioned and styled searchbar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div id="logo-container">
         <img id="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
-    <input type="form">
+    <div id="searchbar-container">
+        <input type="form">
+    </div>
     <button type="button">Google Search</button>
     <button type="button">I'm Feeling Lucky</button>
     <p>
