scraped and started again. added and postioned searchbar buttons and logo

--- a/index.html
+++ b/index.html
@@ -1,59 +1,20 @@
 <!DOCTYPE html>
-<html lang="eng">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Google</title> 
-</head>
-<body>
-    <header>
-        <nav>
-            <div id="upper-left-links">
-                <ul>
-                    <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
-                    <li><a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a></li>
-                </ul>
-            </div>
-            <div id="upper-right-links">
-                <ul>
-                    <li><a href="http://www.gmail.com/">Gmail</a></li>
-                    <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a></li>
-                </ul>
-            </div>
-            <div id="upper-right-icons">
-                <ul>
-                    <li><img id="apps" src="https://www.iconfinder.com/data/icons/google-material-design-icons/48/ic_apps_48px-512.png" alt="Google Apps"></li>
-                    <li><img id="account" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ce/Google_account_icon.svg/804px-Google_account_icon.svg.png" alt="Google Account"></li>
-                </ul>
-            </div>
-        </nav>  
-    </header>
-    <div id="logo-container">
-        <img id="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
-    </div>
-    <div id="searchbar-container">
-        <input type="form">
-    </div>
-    <button type="button">Google Search</button>
-    <button type="button">I'm Feeling Lucky</button>
-    <p>
-        <a href="https://tv.google/?utm_source=google.com&utm_medium=google_oo&utm_campaign=gtv-launch&utm_content=hpp">Meet Google TV!</a>
-        Get the entertainment you love, with a little help from Google
-    </p>
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
-                <li><a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a></li>
-                <li><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
-            </ul>
-            <ul>
-                <li><a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a></li>
-                <li><a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a></li>
-                <li><a href="https://support.google.com/accounts/answer/3118621?hl=en">Settings</a></li>
-            </ul>
-
-        </nav>
-    </footer>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Google</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div id="google-logo" class="container">
+            <img src="images/google_logo.png" alt="Google">
+        </div>
+        <div id="searchbar-container" class="container">
+            <input id="searchbar" type="text">
+        </div>
+        <div id="search-buttons" class="container">
+            <button class="search-btn" type="submit">Google Search</button>
+            <button class="search-btn" type="submit">I'm Feeling Lucky</button>
+        </div>
+    </body>
 </html>
