finished searchbar and added blurb

--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
             <img src="images/google_logo.png" alt="Google">
         </div>
         <div id="searchbar-container" class="container">
+            <img id="mag-icon" src="images/mag-icon.png" alt="">
             <input id="searchbar" type="text">
+            <img id="voice-icon" src="images/google_microphone_icon.png" alt="">
         </div>
         <div id="search-buttons" class="container">
             <button class="search-btn" type="submit">Google Search</button>
             <button class="search-btn" type="submit">I'm Feeling Lucky</button>
         </div>
+        <div id="blurb">
+            <img id="vote-button" src="images/vote-button.png">
+            <a href="https://www.google.com/search?q=how+do+i+vote+%23election2020" id="vote-blurb">Find out how to vote this election</a>
     </body>
 </html>
