Added navigation header bar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
         <title>Google</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <header>
+        <nav>
+            <div id="top-left-links">
+                <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+                <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+            </div>
+            <div id="top-right-links">
+                <a href="https://mail.google.com/">Gmail</a>
+                <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
+            </div>
+            <div id="top-right-icons">
+                <img id="apps-icon" src="images/google-apps.png" alt="Apps">
+                <button id="sign-in">Sign In</button>
+            </div>
+        </nav>
+    </header>
     <body>
         <div id="google-logo" class="container">
             <img src="images/google_logo.png" alt="Google">
