Finished styling sign in button. Made footer and added left links

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
         <title>Google</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <header>
-        <nav>
-            <div id="top-left-links">
-                <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
-                <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
-            </div>
-            <div id="top-right-links">
-                <a href="https://mail.google.com/">Gmail</a>
-                <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
-            </div>
-            <div id="top-right-icons">
-                <img id="apps-icon" src="images/google-apps.png" alt="Apps">
-                <button id="sign-in">Sign In</button>
-            </div>
-        </nav>
-    </header>
     <body>
+        <header>
+            <nav>
+                <div id="top-left-links">
+                    <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+                    <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+                </div>
+                <div id="top-right-links">
+                    <a href="https://mail.google.com/">Gmail</a>
+                    <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
+                </div>
+                <div id="top-right-icons">
+                    <img id="apps-icon" src="images/google-apps.png" alt="Apps">
+                    <button id="sign-in">Sign In</button>
+                </div>
+            </nav>
+        </header>
         <div id="google-logo" class="container">
             <img src="images/google_logo.png" alt="Google">
         </div>
@@ -37,5 +37,14 @@
         <div id="blurb">
             <img id="vote-button" src="images/vote-button.png">
             <a href="https://www.google.com/search?q=how+do+i+vote+%23election2020" id="vote-blurb">Find out how to vote this election</a>
+        </div>
+        <footer>
+            <div id="bottom-links-left">
+                <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+                <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a>
+                <a href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a>
+            </div>
+        </footer>
     </body>
+   
 </html>
