--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
         </div>
         <footer>
             <div id="bottom-links-left">
-                <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
-                <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a>
-                <a href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a>
+                <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1" style="color: #5F6368;">Advertising</a>
+                <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/" style="color: #5F6368;">Business</a>
+                <a href="https://www.google.com/search/howsearchworks/?fg=1" style="color: #5F6368;">How Search Works</a>
+            </div>
+            <div id="bottom-links-right">
+                <a href="https://policies.google.com/privacy?hl=en&fg=1" style="color: #5F6368;">Privacy</a>
+                <a href="https://policies.google.com/terms?hl=en&fg=1" style="color: #5F6368;">Terms</a>
+                <a href="" style="color: #5F6368;">Settings</a>
             </div>
         </footer>
     </body>
