--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Google</title>
+        <title>Google | Jake Dam</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
